# otus-pdp-2024-homework-02

./: Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: base.yml
homework_02/advanced/: buffer.py  callable-protocol.py  decorator.py  descriptor.py  forward.py  generator.py  generic-class.py  never.py  never2.py  overload-literal.py  overload.py  paramspec.py  protocol.py  recursive.py  type.py  typed-dict.py  typeguard.py  typeshed.py  variadic-generics.py
homework_02/basic/: any.py  dict.py  final.py  kwargs.py  list.py  optional.py  parameter.py  return.py  tuple.py  typealias.py  union.py  variable.py
tests/: test_homework_expectations_with_pyright.py
