[tool.poetry]
name = "challenges"
version = "0.1.0"
description = ""
authors = ["Dmitriy Salamatov <sds@scd.pp.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyright = "^1.1.390"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
pythonVersion = "3.12"